--- a/res/drawable/border.xml
+++ b/res/drawable/border.xml
@@ -3,4 +3,5 @@
        android:shape="rectangle">
 	<stroke android:width="1px" android:color="@android:color/white" />
  
+	 <solid android:color="#ffffff"/>  
 </shape>
