--- a/res/layout/view_intercept.xml
+++ b/res/layout/view_intercept.xml
@@ -10,11 +10,27 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="btn" />
+    
+      <Button
+        android:id="@+id/clear"
+        android:tag="btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="clear" />
 
     <TextView
         android:id="@+id/text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="x" />
+    
+    <TextView 
+        android:id="@+id/log"
+        android:padding="5dp"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/border"
+        android:text=""/>
+        
 
 </LinearLayout>
