--- a/res/drawable/border.xml
+++ b/res/drawable/border.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
-       android:shape="rectangle">
-	<stroke android:width="1px" android:color="@android:color/white" />
- 
-	 <solid android:color="#ffffff"/>  
+    android:shape="rectangle" >
+
+    <stroke
+        android:width="1px"
+        android:color="#335566" />
+
+    <solid android:color="#ffffff" />
+    
+    <corners android:radius="4dp" />
+
 </shape>
